# opengpts

./: .clabot  .env  .env-example  .env.example  .env.exemple  .env.gcp.yaml.example  .gitignore  API.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  MEMORY.md  Makefile  Maximum File Size Limiter  README.md  agent.py  auth.md  compose.override.test.yml  compose.override.yml  deploy.sh  docker-compose-prod.yml  docker-compose.pg.yml  docker-compose.yml  langgraph.json
.github/workflows/: _lint.yml  build_deploy_image.yml  ci.yml  langserve_ci.yml
backend/: .env  .gitignore  Dockerfile  Makefile  README.md  googleCalendar.js  index.js  log_config.json  outlook.js  package.json  pyproject.toml  requirements.txt  server.js
backend/app/: agent.py  chatbot.py  checkpoint.py  config_schema.json  ingest.py  lifespan.py  llms.py  message_types.py  messages.py  new_agent.py  new_chatbot.py  new_rag.py  parsing.py  redis.py  retrieval.py  schema.py  server.py  storage.py  stream.py  tools.py  upload.py
backend/app/agent_types/: constants.py  google_agent.py  openai_agent.py  prompts.py  tools_agent.py  xml_agent.py
backend/app/api/: __init__.py  assistants.py  runs.py  security.py  threads.py  users.py
backend/app/auth/: handlers.py  settings.py
backend/app/graphs/: new_agent.py  new_chatbot.py  new_learning.py  new_rag.py
backend/app/langserve/: client.py  schema.py
backend/app/storage/: __init__.py  base.py  postgres.py  redis.py  settings.py  sqlite.py  storage.py
backend/migrations/: 000001_create_extensions_and_first_tables.down.sql  000001_create_extensions_and_first_tables.up.sql  000002_checkpoints_update_schema.down.sql  000002_checkpoints_update_schema.up.sql  000003_create_user.down.sql  000003_create_user.up.sql  000003_create_user_table.up.sql  000004_add_metadata_to_thread.down.sql  000004_add_metadata_to_thread.up.sql  000004_update_user_table.up.sql  000005_advanced_checkpoints_schema.down.sql  000005_advanced_checkpoints_schema.up.sql  000005_update_user_table1.down.sql
backend/migrations/postgres/: 000001_create_extensions_and_first_tables.down.sql  000001_create_extensions_and_first_tables.up.sql  000003_create_user.up.sql
backend/migrations/sqlite/: 000001_create_extensions_and_first_tables.up.sql  000002_checkpoints_update_schema.up.sql  000003_create_user.down.sql
backend/tests/unit_tests/: __init__.py  conftest.py  test_imports.py  test_placeholder.py  utils.py
backend/tests/unit_tests/agent_executor/: test_ingestion.py  test_parsing.py  test_upload.py
backend/tests/unit_tests/app/: helpers.py  test_app.py  test_auth.py
backend/tests/unit_tests/fixtures/: __init__.py  sample.docx  sample.epub  sample.html  sample.md  sample.odt  sample.rtf  sample.txt
backend/ui/: index.html
backend/ui/assets/: index-030c7d0e.js  index-0a533f7b.css  index-2a70d776.js  index-338f04a9.js  index-5a265631.js  index-659277e1.js  index-86d2f9e8.css  index-fd5a17b9.js
docs/: ADVANCED-DOC.md  BASIC-DOC.md  EXTENSION-PROJECT-DOC.md
frontend/: .env  .eslintrc.cjs  Dockerfile  create-package.json  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.js  App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/api/: assistants.ts  threads.ts
frontend/src/components/: AuthRoute.tsx  Chat.tsx  ChatList.tsx  Config.tsx  ConfigList.tsx  Document.tsx  FileUpload.tsx  Home.tsx  JsonEditor.tsx  LangSmithActions.tsx  Layout.tsx  LoginSignUp.tsx  Message.tsx  MessageEditor.tsx  NewChat.tsx  NotFound.tsx  OrphanChat.tsx  String.tsx  StringEditor.tsx  Timeline.tsx  Tool.tsx  TypingBox.tsx
frontend/src/hooks/: useChatList.ts  useChatMessages.ts  useConfigList.ts  useHistories.ts  useMessageEditing.ts  useSchemas.ts  useStatePersist.tsx  useStreamState.tsx  useThreadAndAssistant.ts  useToolsSchemas.ts
frontend/src/utils/: cn.ts  defaults.ts  equals.ts  formTypes.ts  json-refs.d.ts  json-refs.js  simplifySchema.ts  str.ts
postgres/: Dockerfile  init.sql
tools/eval_tool/: eval_tool.py
tools/redis_to_postgres/: Dockerfile  README.md  docker-compose.yml  migrate_data.py
tools/sqlite_migrate/: Dockerfile
